--- a/View/partial/footer.mustache
+++ b/View/partial/footer.mustache
@@ -1,6 +1,6 @@
 
 <footer>
-    <h1>aca va todo el footer cuando lo tengamos definido</h1>
+    <p class="footer-texto">@ Integrantes: Figueredo , Perri & Charlin </p>
 </footer>
 </body>
 
