--- a/css/estilos.css
+++ b/css/estilos.css
@@ -145,6 +145,9 @@ footer{
  }
 
  /** Pagina Proforma **/
+.ancho{
+    width: 60%!important;
+}
 .formulario-proforma{
     width: 90%;
     background-color: rgb(241, 241, 241);
@@ -156,6 +159,10 @@ footer{
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 5px 5px 11px 1px rgba(0, 0, 0, 0.712);
+}
+.align-center{
+    align-self: center;
+
 }
 .campos-proforma{
     display: flex;
