--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,8 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /*overflow-y:hidden;*/
-    /*overflow-x:hidden;*/
+    overflow-y:hidden;
+    overflow-x:hidden;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -50,7 +50,7 @@ label{
 .formulario-login{
     display: flex;
     flex-direction: column;
-    width: 30%;
+    width: 40%;
     margin: 4rem auto;
     background-color:rgb(241, 241, 241);
     padding: 2rem;
@@ -155,6 +155,10 @@ label{
      padding-bottom: 1rem;
  }
 
+ .tabla-proformas{
+     width: 100%;
+ }
+
  .reporte{
      width: 75%;
      text-align: center;
@@ -196,10 +200,37 @@ label{
 }
 
 /** Pagina Roles **/
+tbody{
+    text-align: center;
+}
 .card-roles{
     display: flex;
-    justify-content: space-around;
     width: 100%;
+    flex-direction: column;
+}
+
+.listado-roles{
+    display: flex;
+    width: 90%;
+    margin: 0 auto;
+    align-items: baseline;
+}
+
+.campo-rol{
+    border: none;
+    border-bottom: 1px solid grey;
+}
+.amarillo{
+    background-color: darkgoldenrod;
+    display: inline-block;
+}
+.amarillo:hover{
+    background-color: #6e5203;
+}
+
+.rol-botones{
+    width: 4rem;
+    height: 3rem;
 }
 /*pagina posicion*/
 .formulario-posicion{
