--- a/css/estilos.css
+++ b/css/estilos.css
@@ -235,13 +235,27 @@ tbody{
 /*pagina posicion*/
 .formulario-posicion{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     /*align-items: center;*/
     width: 80%;
-    margin: 4rem auto;
+    margin: 0.6rem auto;
     background-color:rgb(241, 241, 241);
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 5px 5px 11px 1px rgba(0, 0, 0, 0.712);
-    height: fit-content;
+    height:450px;
+}
+.mapa {
+    z-index: 1;
+    width:30rem;
+    height:100%;
+    margin: auto;
+}
+.col-posicion-input{
+    display: flex;
+    flex-direction: column;
+    margin: 2rem;
+    width: 17rem;
+    text-align: center;
+
 }
