--- a/css/estilos.css
+++ b/css/estilos.css
@@ -125,6 +125,8 @@ label{
 }
 
 /** Pagina Home **/
+
+
 .main-home{
     display: flex;
 }
@@ -158,7 +160,9 @@ ul a{
 }
 
 .tabla-proformas{
-    width: 100%;
+    width: 90%;
+    margin:1rem auto;
+
 }
 
 .reporte{
@@ -199,6 +203,32 @@ ul a{
     display: flex;
     flex-direction: column;
     width: 48%;
+}
+
+.agregar-proforma{
+    width: 90%;
+    margin: auto auto;
+    text-align: start;
+}
+
+.agregar-proforma a{
+    display: inline-block;
+    background-color: darkgreen;
+    color: white;
+    padding: 1rem;
+    text-decoration: none;
+    border-radius: 5px;
+    text-align: center;
+    width: max-content;
+}
+
+.agregar-proforma a:hover{
+    background-color: #023c02;
+    transition: 0.4s;
+}
+
+.icono-ver:hover{
+    color: blue;
 }
 
 /** Pagina Roles **/
