--- a/css/estilos.css
+++ b/css/estilos.css
@@ -312,3 +312,31 @@ tbody{
 .div-estado:last-child{
     margin-bottom: 1rem;
 }
+
+/** Pagina Finalizar Proforma **/
+.formulario-gasto{
+    display: flex;
+    flex-direction: column-reverse;
+    width: 60%;
+    margin: 4rem auto;
+    background-color:rgb(241, 241, 241);
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 5px 5px 11px 1px rgba(0, 0, 0, 0.712);
+    height: fit-content;
+}
+
+.total-gasto{
+    width: 85%;
+    margin: auto;
+    display: flex;
+    justify-content: flex-end;
+}
+.total-gasto p{
+    color: red;
+    font-size: large;
+    font-weight: bolder;
+}
+.total{
+    margin-left: 0.4rem;
+}
